--- a/src/README.org
+++ b/src/README.org
@@ -10,7 +10,7 @@
                |
                |
                v
-             extra
+             extra FIXME not
                |
                |
                v
